--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body{
-    background-image: url("https://radio.x-team.com/static/media/mario.28e65fd9.gif");
+    background-image: url("backgroud.gif");
     background-attachment: fixed;
     background-size: cover;
     background-position: bottom;
